--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "nodemon": "^2.0.20"
+    "mariadb": "^3.0.2",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.26.0",
+    "sqlite3": "^5.1.2"
   }
 }
